[WEEK 04] header top 10

--- a/w02.md
+++ b/w02.md
@@ -1,3 +1,7 @@
+---
+permalink : /W02/
+---
+
 # Top 10 list Week 02
 
 1. [Domain and Access Matrix](https://www.geeksforgeeks.org/access-matrix-in-operating-system/#:~:text=Access%20matrix%20is%20used%20to,domains%20and%20columns%20represent%20objects.&text=We%20must%20also%20decide%20the,decided%20by%20the%20operating%20system.)<br>
