--- a/w03.md
+++ b/w03.md
@@ -1,3 +1,7 @@
+---
+permalink : /W03/
+---
+
 # Top 10 list Week 03
 
 1. [Partitioning](https://www.cs.uic.edu/~jbell/CourseNotes/OperatingSystems/12_FileSystemImplementation.html)<br>
