--- a/w04.md
+++ b/w04.md
@@ -3,3 +3,33 @@ permalink : /W04/
 ---
 
 # Top 10 list Week 04
+
+1. [Multiple Address Variable](https://www.youtube.com/watch?v=WBA6svOyWb8)<br>
+For Big Endian, the most significant value is stored first in the sequence of the bytes. For little endian, the least significant value is stored first. In bi-endian, the switching between big and little endian is possible.
+
+2. [Logical Address](https://www.geeksforgeeks.org/logical-and-physical-address-in-operating-system/)<br>
+The Logical address is a virtual address that is used to access the physical memory location by CPU. A set of all of the logical addresses is called a logical address space.
+
+3. [Physical Address](https://www.geeksforgeeks.org/logical-and-physical-address-in-operating-system/)<br>
+The Physical address is a location that exists in the memory unit and can be accessed physically. A physical address space is a set of all physical address that are mapped to the logical addresses.
+
+4. [Address Binding](https://www.geeksforgeeks.org/address-binding-and-its-types/)<br>
+Address binding is the process of connecting program instructs and data to the physical memory location. There are three types of address binding, compile-time, load time, execution time.
+
+6. [Dynamic Linking](https://www.geeksforgeeks.org/static-and-dynamic-linking-in-operating-systems/)<br>
+In dynamic linking, shared libraries are placed in a final executable file. The linking is during run time where the executable file and libraries are in the memory.
+
+7. [Static Linking](https://www.geeksforgeeks.org/static-and-dynamic-linking-in-operating-systems/)<br>
+In static linking, library modules  are copied into the final executable image at the last step of the compilation process. When the program is loaded the OS places a file that contains the executable code and data into memory.
+
+8. [Memory Management Unit](https://www.geeksforgeeks.org/static-and-dynamic-linking-in-operating-systems/)<br>
+MMU is a hardware in the CPU that handles virtual memory. It functions by receiving data requests and then it determines  whether the data needs to be retrieved from RAM or ROM storage.
+
+9. [Contiguous Allocation](https://www.javatpoint.com/os-contiguous-allocation#:~:text=If%20the%20blocks%20are%20allocated,is%20known%20as%20contiguous%20allocation.&text=The%20starting%20block%20and%20the,are%20mentioned%20in%20the%20table.)<br>
+Contiguous allocation is when files are allocated blocks and the logical blocks get the contiguous physical block on the hard disk. Contiguous allocation supports random access into files.
+
+10. [Paging](https://www.guru99.com/paging-in-operating-system.html)<br>
+Paging is a kind of storage mechanism that gets processes from secondary storage to the main memory as pages. The main memory is divided into small blocks of physical memory called frames. Paging is used to get faster data access.
+
+
+
