--- a/w10.md
+++ b/w10.md
@@ -7,4 +7,4 @@ permalink : /W10/
 # TIPS for Class OS212
 
 1. [Asssigned study groups](https://en.wikipedia.org/wiki/Study_group)<br>
-I think that most of the time when students struggle to complete a weekly task (e.g. encountering errors) they would need some help if they are stil confused after googling. Some errors are not directly google-able, although students are given an opportunity to ask in the discord channel, some may feel uncomfortable to ask to a huge number of participants. Maybe assigning a group to each student would help each student excel not only in the assignments but understand more of the materials while exchanging knowledge. The group assigned could be given tasks as well (so not all weekly assignments are individual tasks).
+I think that most of the time when students struggle to complete a weekly task (e.g. encountering errors) they would need some help if they still happen to be confused after googling. Some errors are not directly google-able, although students are given an opportunity to ask in the discord channel, some may feel uncomfortable to ask to a huge number of participants. Maybe assigning a group to each student would help each student excel not only in the assignments but understand more of the materials while exchanging knowledge. The group assigned could be given tasks as well (so not all weekly assignments are individual tasks).
